--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -22,3 +22,19 @@
       </div>
   </div>
 </header>
+<div class="mobile-menu">
+  <div class="mobile-menu__content">
+      <ul class="mobile-menu__list">
+          <li><a href="#hero" class="mobile-menu__link">Главная</a></li>
+          <li><a href="#about" class="mobile-menu__link">О платформе</a></li>
+          <li><a href="#benefits" class="mobile-menu__link">Преимущества</a></li>
+          <li><a href="#innovation" class="mobile-menu__link">Инновации</a></li>
+          <li><a href="#blog" class="mobile-menu__link">Блог</a></li>
+          <li><a href="#contact" class="mobile-menu__link">Контакты</a></li>
+      </ul>
+      <div class="mobile-menu__footer">
+          <a href="mailto:support@inf-tide.blog">support@inf-tide.blog</a>
+          <p>Milano, Italia</p>
+      </div>
+  </div>
+</div>
