--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -18,7 +18,7 @@
       </div>
       <div class="hero__visual">
           <div class="hero__image-wrapper">
-              <img src="img/placeholder.png" alt="Career Growth" class="hero__img">
+              <img src="/img/one.jpg" alt="Career Growth" class="hero__img">
               <div class="hero__floating-card">
                   <i data-lucide="trending-up"></i>
                   <span>Рост +120%</span>
@@ -83,7 +83,7 @@
           </ul>
       </div>
       <div class="benefits__image">
-          <img src="img/placeholder.png" alt="Benefits" class="parallax-img">
+          <img src="/img/two.jpg" alt="Benefits" class="parallax-img">
       </div>
   </div>
 </section>
@@ -116,32 +116,32 @@
       <div class="blog__grid">
           <article class="blog-card">
               <div class="blog-card__img">
-                  <img src="img/placeholder.png" alt="Blog 1">
+                  <img src="/img/three.jpg" alt="Blog 1">
               </div>
               <div class="blog-card__content">
                   <span class="blog-date">12 Декабря 2024</span>
                   <h4>Как начать карьеру в IT без опыта?</h4>
-                  <a href="#" class="blog-link">Читать далее →</a>
+                  <a href="#contact" class="blog-link">Читать далее →</a>
               </div>
           </article>
           <article class="blog-card">
               <div class="blog-card__img">
-                  <img src="img/placeholder.png" alt="Blog 2">
+                  <img src="/img/four.jpg" alt="Blog 2">
               </div>
               <div class="blog-card__content">
                   <span class="blog-date">10 Декабря 2024</span>
                   <h4>Тренды цифрового консалтинга в Милане</h4>
-                  <a href="#" class="blog-link">Читать далее →</a>
+                  <a href="#contact" class="blog-link">Читать далее →</a>
               </div>
           </article>
           <article class="blog-card">
               <div class="blog-card__img">
-                  <img src="img/placeholder.png" alt="Blog 3">
+                  <img src="/img/five.jpg" alt="Blog 3">
               </div>
               <div class="blog-card__content">
                   <span class="blog-date">05 Декабря 2024</span>
                   <h4>AI для обычных людей: просто о сложном</h4>
-                  <a href="#" class="blog-link">Читать далее →</a>
+                  <a href="#contact" class="blog-link">Читать далее →</a>
               </div>
           </article>
       </div>
