--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
       <div class="footer__grid">
           <div class="footer__col">
-              <a href="/" class="footer__logo">Inf-Tide.blog</a>
+              <a href="/./#hero" class="footer__logo">Inf-Tide.blog</a>
               <p class="footer__desc">
                   Решения, которые меняют правила игры.
                   Экспертная поддержка на всех этапах вашего карьерного пути.
@@ -15,22 +15,22 @@
           <div class="footer__col">
               <h3 class="footer__title">Навигация</h3>
               <ul class="footer__links">
-                  <li><a href="#about">О нас</a></li>
-                  <li><a href="#blog">Блог</a></li>
-                  <li><a href="#contact">Контакты</a></li>
-                  <li><a href="#innovation">Технологии</a></li>
+                  <li><a href="./#about">О нас</a></li>
+                  <li><a href="./#blog">Блог</a></li>
+                  <li><a href="./#contact">Контакты</a></li>
+                  <li><a href="./#innovation">Технологии</a></li>
               </ul>
           </div>
 
           <div class="footer__col">
               <h3 class="footer__title">Информация</h3>
               <ul class="footer__links">
-                <li><a href="privacy.html">Политика конфиденциальности</a></li>
-                <li><a href="cookies.html">Политика использования файлов cookie</a></li>
-                <li><a href="terms.html">Условия использования</a></li>
-                <li><a href="return.html">Политика возврата средств</a></li>
-                <li><a href="disclaimer.html">Отказ от ответственности</a></li>
-                <li><a href="personal-data-policy.html">Персональные данные</a></li>
+                <li><a href="./privacy.html">Политика конфиденциальности</a></li>
+                <li><a href="./cookies.html">Политика использования файлов cookie</a></li>
+                <li><a href="./terms.html">Условия использования</a></li>
+                <li><a href="./return.html">Политика возврата средств</a></li>
+                <li><a href="./disclaimer.html">Отказ от ответственности</a></li>
+                <li><a href="./personal-data-policy.html">Персональные данные</a></li>
               </ul>
           </div>
 
