--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,21 +1,21 @@
 <header class="header">
   <div class="container header__container">
-      <a href="/" class="header__logo">
+      <a href="./#hero" class="header__logo">
           Inf-Tide<span class="header__dot">.</span>
       </a>
 
       <nav class="header__nav">
           <ul class="header__menu">
-              <li class="header__item"><a href="#hero" class="header__link">Главная</a></li>
-              <li class="header__item"><a href="#about" class="header__link">О платформе</a></li>
-              <li class="header__item"><a href="#benefits" class="header__link">Преимущества</a></li>
-              <li class="header__item"><a href="#innovation" class="header__link">Инновации</a></li>
-              <li class="header__item"><a href="#blog" class="header__link">Блог</a></li>
+              <li class="header__item"><a href="./#hero" class="header__link">Главная</a></li>
+              <li class="header__item"><a href="./#about" class="header__link">О платформе</a></li>
+              <li class="header__item"><a href="./#benefits" class="header__link">Преимущества</a></li>
+              <li class="header__item"><a href="./#innovation" class="header__link">Инновации</a></li>
+              <li class="header__item"><a href="./#blog" class="header__link">Блог</a></li>
           </ul>
       </nav>
 
       <div class="header__actions">
-          <a href="#contact" class="btn btn--primary">Начать сейчас</a>
+          <a href="./#contact" class="btn btn--primary">Начать сейчас</a>
           <button class="header__burger" aria-label="Меню">
               <i data-lucide="menu"></i>
           </button>
@@ -25,12 +25,12 @@
 <div class="mobile-menu">
   <div class="mobile-menu__content">
       <ul class="mobile-menu__list">
-          <li><a href="#hero" class="mobile-menu__link">Главная</a></li>
-          <li><a href="#about" class="mobile-menu__link">О платформе</a></li>
-          <li><a href="#benefits" class="mobile-menu__link">Преимущества</a></li>
-          <li><a href="#innovation" class="mobile-menu__link">Инновации</a></li>
-          <li><a href="#blog" class="mobile-menu__link">Блог</a></li>
-          <li><a href="#contact" class="mobile-menu__link">Контакты</a></li>
+          <li><a href="./#hero" class="mobile-menu__link">Главная</a></li>
+          <li><a href="./#about" class="mobile-menu__link">О платформе</a></li>
+          <li><a href="./#benefits" class="mobile-menu__link">Преимущества</a></li>
+          <li><a href="./#innovation" class="mobile-menu__link">Инновации</a></li>
+          <li><a href="./#blog" class="mobile-menu__link">Блог</a></li>
+          <li><a href="./#contact" class="mobile-menu__link">Контакты</a></li>
       </ul>
       <div class="mobile-menu__footer">
           <a href="mailto:support@inf-tide.blog">support@inf-tide.blog</a>
